Fixed alignment in inline codebox (#169)
* Fix text alignment of some blocks

* Fix alignement and file to be edited

--- a/src/main/_sass/_style.scss
+++ b/src/main/_sass/_style.scss
@@ -714,12 +714,12 @@ pre,
 code {
   white-space: pre-wrap;
   display: inline-block;
-  margin-top: -3px;
   font: 14px Consolas, Menlo, "Courier New", Courier, "Liberation Mono", monospace;
   padding-top: 0.2em;
   padding-bottom: 0;
   padding-left: 0.5em;
   padding-right: 0.5em;
+  line-height: 17px;
   //border: 1px solid #cacaca;
 }
 
